tests/paczka2/big_fuzzy/35068560.err
Error in line 5: ruEPfW A856 -1,3
Error in line 4: ruEPfW A856 16,5
Error in line 2: A856 A856 26,4
Error in line 6: ruEPfW A335 34,9
Error in line 8: A856 A439 51,4
Error in line 18: A856 A335 25,2
Error in line 32: SjNSUPkQ A439 13,4
Error in line 44: SjNSUPkQ A439 50,6
Error in line 67: ruEPfW A439 72,70
Error in line 65: Xmtf A856 22,9
Error in line 91: Xmtf S166 248,5
Error in line 86: u0Uq7 A439 89,1
Error in line 93: Xmtf A856 32,4
Error in line 101: A856 A335 57,1
Error in line 119: xim A856 60,05
Error in line 116: Xmtf A439 25,6
Error in line 135: SjNSUPkQ A856 62,7
Error in line 161: g9VlpsWb7 A439 52,7
Error in line 162: g9VlpsWb7 A335 47,3
Error in line 166: u0Uq7 A335 5,2
Error in line 191: SjNSUPkQ A856 39,7
Error in line 201: u0Uq7 S166 98,1
Error in line 219: u0Uq7 A439 7,3
Error in line 203: ruEPfW A856 67,2
Error in line 232: Xmtf A439 62,0
Error in line 235: Xmtf A335 19,3
Error in line 233: g9VlpsWb7 A335 68,2
Error in line 239: SjNSUPkQ A439 92,6
Error in line 248: g9VlpsWb7 A335 59,0
